# python-project-lvl3

./: Makefile  README.md  pyproject.toml
.github/workflows/: CI.yml
page_loader/: __init__.py  arg_parser.py  cli.py  download_assets.py  page.py  page_loader.py  url.py  url_parse.py
page_loader/scripts/: page_loader.py
tests/: test.py  test_page_loader.py
tests/fixture/: init-site-com-blog-about.html  localhost-blog-about.html  notepadonline-ru-.html  site-com-blog-about.html
tests/fixture/notepadonline-ru-_files/: notepadonline-ru-css-style.css  notepadonline-ru.html
